# matrix-f32

./: .clang-format  .travis-install-arm-gcc  .travis.yml  ARMToolchain.cmake  CMakeLists.txt  README.md
include/: matrix_f32.h
src/: matrix_f32.c
test/: add.cpp  backward_substitution.cpp  copy.cpp  deinitialization.cpp  forward_substitution.cpp  get_and_set_val.cpp  initialization.cpp  inverse.cpp  lu_decomposition.cpp  main.cpp  multiplication.cpp  scale.cpp  subtract.cpp  swap.cpp  two_mat_equal.cpp
util/: runtime_error.c  runtime_error.h
